Fix: Navbar alignment and styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,7 @@ body {
     color: #fafafa;
     padding-left: 40px;
     padding-right: 25px;
+    font-size: 2rem;
 }
 
 .navbar-brand:hover {
@@ -74,7 +75,7 @@ body {
     align-items: center;
     justify-content: center;
 
-    margin-top: 48px;
+    margin-top: 64px;
     position: relative;
 }
 
